objects/F_I_Install__c.object
<CustomObject>
    <description>Not used</description>
    <fields>
        <fullName>ANS_LSS_Date__c</fullName>
        <label>ANS/LSS Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>A_W_Received__c</fullName>
        <label>A/W Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <label>Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>At_Data_Mapping__c</fullName>
        <label>At Data Mapping</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMF_Info__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CMF Info</label>
        <referenceTo>CMF_Info__c</referenceTo>
        <relationshipLabel>F&amp;I Installs</relationshipLabel>
        <relationshipName>R00N40000001m7wnEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMF__c</fullName>
        <formula>CMF_Info__r.Ship_CMF__c</formula>
        <label>CMF #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Catalog_Description__c</fullName>
        <label>Catalog # Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Catalog__c</fullName>
        <label>Catalog #</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_ID__c</fullName>
        <label>Contract ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DCAP__c</fullName>
        <label>DCAP?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes-STD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes-Custom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DC_Upgrade__c</fullName>
        <label>DC Upgrade?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>F_I_EFORMS_FOR_DSDA__c</fullName>
        <label>F&amp;I EFORMS FOR DSDA</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Installed__c</fullName>
        <label>Installed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project #</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Northern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Roll_Call_Date__c</fullName>
        <label>Roll Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sent_FA_for_Approval__c</fullName>
        <label>Sent FA for Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Sold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forms Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AWIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Mapping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold-ADP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold-Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installed-FI Laser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installed-DC2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installed-DC3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installed-Old Tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold_Prelim FA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stock_Order__c</fullName>
        <label>Stock Order #</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Forms_Contracted__c</fullName>
        <label># of Forms Contracted</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_LaserStation_Units__c</fullName>
        <label># of LaserStation Units</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>F&amp;I Install</label>
    <nameField>
        <displayFormat>FII-{00000}</displayFormat>
        <label>F&amp;I Install</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>F&amp;I Installs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>